--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-slideshow-image": "^4.0.1",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
