--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
-
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  from = "/old-path"
+  to = "/new-path"
+  status = 404
+  force = false
+  query = {path = ":path"}
