--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
+[build]
+  command = " CI = npm run build"
+  publish = "/build"
+  base ="/"
+
 [[redirects]]
-  from = "/old-path"
-  to = "/new-path"
-  status = 404
-  force = false
-  query = {path = ":path"}
+  from = "/*"
+  to = "/index.html"
+  status = 200
