--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
@@ -18,6 +17,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
@@ -29,6 +29,8 @@
     "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
     "react-slideshow-image": "^4.0.1",
+    "react-toastify": "^9.1.1",
+    "recharts": "^2.1.16",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
     "use-places-autocomplete": "^4.0.0",
