--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/x-data-grid": "^5.12.0",
     "@mui/x-data-grid-generator": "^5.12.1",
     "@react-google-maps/api": "^2.13.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.38.0",
     "react-horizontal-scrolling-menu": "^3.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-select": "^5.3.2",
@@ -31,6 +33,7 @@
     "react-slideshow-image": "^4.0.1",
     "react-toastify": "^9.1.1",
     "recharts": "^2.1.16",
+    "redux": "^4.2.0",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
     "use-places-autocomplete": "^4.0.0",
