--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "country-flag-icons": "^1.5.5",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.2.0",
+    "material-ui-flags": "^1.2.4",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
@@ -27,18 +29,19 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^2.1.3",
     "react-select": "^5.3.2",
     "react-simple-image-slider": "^2.4.1",
     "react-slideshow-image": "^4.0.1",
-    "react-toastify": "^9.1.1",
     "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
